# sidonia

./: Cargo.toml  README.md  rustfmt.toml  sidonia.rcnet
.github/workflows/: rust.yml
src/: core.rs  lib.rs  main.rs  process.rs
src/core/: d3d9.rs  detours.rs  errors.rs  game.rs  globals.rs  hook_manager.rs  msvc.rs  riot.rs  ui.rs  utilities.rs
src/core/d3d9/: direct3d9.rs
src/core/msvc/: compressed_pair.rs  list.rs  map.rs  smart_pointers.rs  string.rs  unique_ptr.rs  unordered_map.rs  unordered_set.rs  vector.rs
src/core/riot/: ai_hero.rs  audio.rs  avatar.rs  baked_environment.rs  box3d.rs  camera_logic.rs  color.rs  contextual_emote_component.rs  event_system.rs  evolution.rs  experience.rs  game_clock.rs  game_object.rs  hero_vo_component.rs  hud_manager.rs  issue_order.rs  karma.rs  logger.rs  metric_stats_bucker_generator.rs  metric_stats_generator.rs  metrics.rs  metrics_details.rs  mutex.rs  net.rs  position_owner.rs  r3d.rs  region.rs  render_pipeline.rs  replication.rs  simple_environment.rs  spellbook.rs  sphere.rs  talent.rs  timer.rs  x3d.rs
src/core/riot/audio/: vo.rs
src/core/riot/event_system/: game_event_network_dispatcher.rs  hero_event_manager.rs
src/core/riot/net/: id.rs
src/core/riot/r3d/: asset_category.rs  auto_restore_texture.rs  camera.rs  color.rs  color_format.rs  light.rs  light_system.rs  matrix44.rs  plane.rs  render_layer.rs  resource_interface.rs  scene.rs  screen_buffer.rs  sun.rs  texture.rs  vector2.rs  (+2 more)
src/core/ui/: input_manager.rs  widgets.rs
src/core/utilities/: logging.rs  math.rs  memory.rs  message_box.rs
(+37 files in other folders)
